refactor: modularize build and add off-heap storage
- Move server code into yierdis-server module\n- Add yierdis-offheap modules (api/netty/unsafe/foreign)\n- Implement unsafe off-heap keyspace + expires index\n- Add OpenSpec specs/changes tracking\n\nVerified: mvn test; openspec validate --strict